--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -4,14 +4,14 @@
 %table#movies
   %thead
     %tr
-      %th Movie Title
+      %th{:class=>params[:sort_by_title]?"hilite":""}=link_to "Movie Title",movies_sort_by_title_path,:id=>"title_header"
       %th Rating
-      %th Release Date
+      %th{:class=>params[:sort_by_release_date]?"hilite":""}=link_to "Release Date",movies_sort_by_release_date_path,:id=>"release_date_header" 
       %th More Info
   %tbody
     - @movies.each do |movie|
       %tr
-        %td= movie.title 
+        %td= movie.title
         %td= movie.rating
         %td= movie.release_date
         %td= link_to "More about #{movie.title}", movie_path(movie)
