--- a/app/views/movies/index.html.haml
+++ b/app/views/movies/index.html.haml
@@ -1,13 +1,20 @@
 -#  This file is app/views/movies/index.html.haml
 %h1 All Movies
-
+= form_tag movies_path, :id=>"ratings_form", :method => :get do
+  Include: 
+  - @all_ratings.each do |rating|
+    = rating
+    = check_box_tag "ratings[#{rating}]","1",@rat.include?(rating),:id=>"ratings_#{rating}"
+  = submit_tag 'Refresh',:id=>"ratings_submit"
 %table#movies
   %thead
     %tr
-      %th{:class=>params[:sort_by_title]?"hilite":""}=link_to "Movie Title",movies_sort_by_title_path,:id=>"title_header"
+      
+      %th{:class=>((params["sort_by_title"]=="true")?"hilite":"")}=link_to "Movie Title",movies_path(params.merge({:sort_by_title=>true,:sort_by_release_date=>false})),:id=>"title_header"
       %th Rating
-      %th{:class=>params[:sort_by_release_date]?"hilite":""}=link_to "Release Date",movies_sort_by_release_date_path,:id=>"release_date_header" 
+      %th{:class=>((params["sort_by_release_date"]=="true")?"hilite":"")}=link_to "Release Date",movies_path(params.merge({:sort_by_title=>false,:sort_by_release_date=>true})),:id=>"release_date_header" 
       %th More Info
+      %th 
   %tbody
     - @movies.each do |movie|
       %tr
